Enhance move-torrents script with improved logging and force parameter handling

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "request": "launch",
             "script": "${workspaceFolder}/move-torrents.ps1",
             "args": [ 
-                "-Test"
+                "-Test", "-Force"
             ]
         }
     ]
