Update script paths and enhance error handling in scheduled task registration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
             "name": "Run install.ps1",
             "type": "PowerShell",
             "request": "launch",
+            "cwd": "${workspaceFolder}",
             "script": "${workspaceFolder}/install.ps1",
             "args": []
         },
